# re-execute

./: Cargo.toml  LICENSE  README.md  deny.toml  justfile  rustfmt.toml
.github/workflows/: build.yml  deny.yml
assets/: file_and_env.sh  printlines.sh  random.sh  rex_loop.sh
src/: args.rs  command_queue.rs  errors.rs  event.rs  key_input.rs  logging.rs  main.rs  output.rs  term_events.rs
src/command/: execution_report.rs  exit_code.rs  mod.rs  queue.rs  queue_message.rs  runner.rs
src/files/: git.rs  mod.rs  utils.rs
src/tui/: duration.rs  mod.rs  output.rs  term.rs
