[package]
name = "re-execute"
version = "0.4.3"
edition = "2021"

authors = ["Nicolas Woltmann"]
description = "Re-execute commands or programs automatically when files are updated"
categories = ["command-line-utilities"]
repository = "https://github.com/nobriot/re-execute"
license = "MIT"
keywords = []
resolver = "2"

[[bin]]
name = "rex"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.36", features = ["derive"] }
notify = "8.1.0"
colored = "3.0.0"
thiserror = "2.0.12"
anyhow = "1.0.98"
shell-words = "1.1.0"
same-file = "1.0.6"
indicatif = "0.18.0"
crossterm = "0.29.0"
crossbeam-channel = "0.5.15"
chrono = "0.4.41"
regex = "1.11.1"

[profile.release]
lto = true
strip = true
codegen-units = 1

[dev-dependencies]
tempfile = "3.20.0"
