[package]
name = "re-execute"
version = "0.5.0"
edition = "2024"
rust-version = "1.88"

authors = ["Nicolas Woltmann"]
description = "Re-execute commands or programs automatically when files are updated"
categories = ["command-line-utilities"]
repository = "https://github.com/nobriot/re-execute"
license = "MIT"
keywords = []
resolver = "2"

[[bin]]
name = "rex"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.56", features = ["derive", "wrap_help"] }
notify = "8.2.0"
colored = "3.1.1"
thiserror = "2.0.18"
anyhow = "1.0.100"
shell-words = "1.1.1"
same-file = "1.0.6"
indicatif = "0.18.3"
crossterm = "0.29.0"
libc = "0.2"
crossbeam-channel = "0.5.15"
chrono = "0.4.43"
regex = "1.12.2"

[profile.release]
lto = true
strip = true
codegen-units = 1

[dev-dependencies]
tempfile = "3.24.0"
