[package]
name = "re-execute"
version = "0.5.1"
edition = "2024"
rust-version = "1.94"

authors = ["Nicolas Woltmann"]
description = "Re-execute commands or programs automatically when files are updated"
categories = ["command-line-utilities"]
repository = "https://github.com/nobriot/re-execute"
license = "MIT"
keywords = []
resolver = "2"

[[bin]]
name = "rex"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.0", features = ["derive", "wrap_help"] }
notify = "8.2.0"
colored = "3.1.1"
thiserror = "2.0.18"
anyhow = "1.0.102"
shell-words = "1.1.1"
same-file = "1.0.6"
indicatif = "0.18.4"
crossterm = "0.29.0"
libc = "0.2"
crossbeam-channel = "0.5.15"
chrono = "0.4.44"
regex = "1.12.3"
unicode-width = "0.2.2"
log = "0.4.29"
env_logger = "0.11.10"

[profile.release]
lto = true
strip = true
codegen-units = 1

[dev-dependencies]
tempfile = "3.27.0"
